--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 
-2020年的计划，分了五个板块按照优先级从高到低排序：信仰，健康，家庭，职场，教会。
+2020年的计划，分了五个板块按照优先级从高到低排序：信仰，健康，家庭，学习，职场，教会。
 
 
 ## Faith
@@ -80,7 +80,7 @@ tags:
 - week40《诗篇》10????? Pray 11????? 国庆节，忘记复盘了
 - week41 🔴《诗篇》 11011010 Pray 11011010 规律的作息非常重要，作息只要乱了，就甭指望早起读经祷告了了。最近还是没从过去发生的一些事情中走出来，心里十分苦闷，反而读诗篇的时候开始理解诗人了。
 - week42 《诗篇》 1110111 Pray 1100111
-- week43(WIP)
+- week43(WIP) 《诗篇》 1 Pray 1 ，顺便读杂书《意义的惊现》。
 - week44
 - week45
 - week46
@@ -145,7 +145,7 @@ tags:
 - week40 锻炼 1000000 \|  早睡 00????? \| 早起 1111111 \|  站立办公2小时 11????? \| 颈椎推拿 0000000  \| 在极客时间买了一个跑步教程，学学看。 00
 - week41 🔴 锻炼 00R00B0 \|  早睡 0000000 \| 早起 0100101 \|  站立办公2小时 0001110 \| 颈椎推拿 000011 \| 跑步教材学习 0000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
 - week42 🔴 锻炼 000000R \|  早睡 0101001 \| 早起 1100000 天冷了，起不来了。 \|  站立办公1小时 00101 \| 颈椎推拿 1010 \| 跑步教材学习 0000 \| 鱼油一粒 1111111 \| 一杯水 1111111
-- week43(WIP)  锻炼 \|  早睡 \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水
+- week43(WIP)  锻炼 0 \|  早睡 1 \| 早起 1 \|  站立办公1小时 1 \| 颈椎推拿 1 \| 跑步教材学习 0 \| 鱼油一粒 1 \| 一杯水 1
 - week44 
 - week45 
 - week46 
@@ -168,84 +168,9 @@ B: badminton
 
 ## Family
 
-### 1.拿到驾照 ✔️
+### 爱妻子
 
-学开车，这条是2019年的遗愿。
-
-- week15 ✔️ 开始练车了！碰到个非常好的教练，不说脏话，非常耐心。
-- week16 🔴 no progress
-- week17 ✔️ Tuesday
-- week18 🔴 no progress
-- week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头 \| 体检
-- week20 ✔️ 周六复习了所有学过的东西
-- week21 🔴 no progress
-- week22 ✔️ 约到了科一
-- week23 ✔️ 周三科一考试 \| 练了一次车
-- week24 ✔️ 周五下午练车一次 5 hour
-- week25 ✔️ 周五模拟考，周六考试，科目二通过, yeah!
-- week26 🔴 no progress
-- week27 🔴 no progress is the plan （周六补工作时间，把前两周请的假补回来)
-- week28 🔴 no progress is the plan （周六补工作时间，把前两周请的假补回来)
-- week29 ✔️ 周一晚上/周日下午学习科目三
-- week30 ✔️ 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
-- week31 🔴 no progress
-- week32 ✔️ 周六科目四考试 \| 拿到驾照, yeah！
-- week38 ✔️ 周六从吴琼昆山花桥的家，开车回上海，30+ km，没走高速，向文坐在我边上指导。几次急刹车，吓死他了。（2020-10-06 现在回想起来，发现还是后视镜和反光镜没用好，这才是急刹的元凶）
-- week41 ✔️ 周二带着刘小坤和沐沐去滴水湖，来回 150 km。以下是这次开车的几点收获。
-	- 高架左2车道最安全。左1是超车道，右1经常有汇入，都不安全。
-	- 城市道路左2车道最安全，左1是超车道，经常变为左转车道；右1经常变为右转车道，直行时会导致频繁变道。
-	- 练习了真实的倒车入库。
-	- 看得懂百度地图的导航。
-	- 上海南站左拐到柳州路的车道在最右边！
-	- 还是不太会使用后视镜/反光镜来判断车距 TODO [ ]
-	- 环形岛不太会过。TODO [ ]
-
-![](https://mednoter.com/media/files/2020/2020-08-08_15-15-02.jpg)
-
-
-### 2.保持财务健康
-
-- 把买房的债务还清
-	- 还清哥哥5万
-	- ✔️ 还清妹妹7万
-- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
-
-> 交易原则  
-> 
-> Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
-> 
-> Rule2: 不主动向朋友推荐 ETF 和股票。  
-> 
-> 若违背以上原则，刘小坤重重的用管教杖责打二次。
-
-### 3.每个季度回济南看望爷爷奶奶和爸爸妈妈
-
-- Quarter 1 ✔️
-- Quarter 2 🔴 回老家会影响随申码，沐沐就无法上学了，暂时不敢回家
-- Quarter 3 10.23-10.25 回老家(青岛发现疫情，取消回家行程）
-- Quarter 4
-
-### [增补] 每周给爸妈&爷爷奶奶打个电话
-
-- week25 ✔️
-- week26 🔴 打不通
-- week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
-- week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
-- week29 🔴 忘记了
-- week30 ✔️ 和爸妈闲聊了一会。
-- week31 ✔️ 和爸妈闲聊 \| 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
-- week32 ✔️ 和爸妈闲聊
-- week33 🔴 忘记了
-- week34 ✔️
-- week35 ✔️ 和爸妈爷爷奶奶聊天，得知爷爷最近脾气不好。
-- week36 ✔️ 和爸妈爷爷奶奶聊天。
-- week37 ✔️ 爸爸最近迷上了打篮球，给他买了双球鞋，买了个水杯。
-- week38 ✔️ 妈妈生病，10月份自己单独回家一趟。
-- week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
-- week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
-- week41 🔴
-- week42 ✔️ 和奶奶聊了聊天
-- week43(WIP) 
+- week43(WIP) Love action 0  \| Love words 1 \| 亲密的身体接触 1 \| 意识到并且感谢妻子的付出 0
 - week44 
 - week45 
 - week46 
@@ -255,16 +180,6 @@ B: badminton
 - week50 
 - week51 
 - week52 
-
-### [增补] 每个月给爷爷奶奶寄送 5 张照片
-
-- June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
-- July. 🔴
-- Aug. ✔️
-- Sept. 🔴
-- Oct.
-- Nov.
-- Dec.
 
 ### [增补] 教沐沐圣经故事/原则 [重中之重]
 
@@ -274,7 +189,7 @@ B: badminton
 - week40 ???????
 - week41 ?100110
 - week42 0101???
-- week43(WIP) 
+- week43(WIP) 1
 - week44 
 - week45 
 - week46 
@@ -284,8 +199,6 @@ B: badminton
 - week50 
 - week51 
 - week52 
-
-
 
 ### [增补] 教沐沐服务别人
 
@@ -324,7 +237,7 @@ B: badminton
 - week52 
 
 
-### 教沐沐英文
+### [增补] 教沐沐英文
 
 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）  
 一， 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min   
@@ -341,7 +254,7 @@ B: badminton
 - week40 ✔️ 每天早晨复习英文 \| 给沐沐报了一个外教课，他的同学在我家里上课，比较省心。
 - week41 每天早晨复习英文 111111
 - week42 叽里呱啦（洪恩英语） 11 \| 外教到家授课 0101000 \| (外教课上维持秩序真的好难啊，还是要和外教说明白1个月后，课堂秩序的维护交给她，而不是我。要不然太花时间了。）
-- week43(WIP) 
+- week43(WIP) 叽里呱啦/洪恩英语/youtube kids 11 \| 外教到家授课 0101000
 - week44 
 - week45 
 - week46 
@@ -352,7 +265,7 @@ B: badminton
 - week51 
 - week52 
 
-### 探索：教沐沐识字
+### [增补] 教沐沐识字
 
 - week5 ✔️ 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
 - week10 ✔️ 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
@@ -465,6 +378,104 @@ B: badminton
 
 ### 10. ~~[Tentative]: 教沐沐打字 (他不感兴趣)~~
 
+
+### 拿到驾照 ✔️
+
+学开车，这条是2019年的遗愿。
+
+- week15 ✔️ 开始练车了！碰到个非常好的教练，不说脏话，非常耐心。
+- week16 🔴 no progress
+- week17 ✔️ Tuesday
+- week18 🔴 no progress
+- week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头 \| 体检
+- week20 ✔️ 周六复习了所有学过的东西
+- week21 🔴 no progress
+- week22 ✔️ 约到了科一
+- week23 ✔️ 周三科一考试 \| 练了一次车
+- week24 ✔️ 周五下午练车一次 5 hour
+- week25 ✔️ 周五模拟考，周六考试，科目二通过, yeah!
+- week26 🔴 no progress
+- week27 🔴 no progress is the plan （周六补工作时间，把前两周请的假补回来)
+- week28 🔴 no progress is the plan （周六补工作时间，把前两周请的假补回来)
+- week29 ✔️ 周一晚上/周日下午学习科目三
+- week30 ✔️ 周二下午练科目三 \| 周五请假全天模拟科目三 \| 周日科目三过了！
+- week31 🔴 no progress
+- week32 ✔️ 周六科目四考试 \| 拿到驾照, yeah！
+- week38 ✔️ 周六从吴琼昆山花桥的家，开车回上海，30+ km，没走高速，向文坐在我边上指导。几次急刹车，吓死他了。（2020-10-06 现在回想起来，发现还是后视镜和反光镜没用好，这才是急刹的元凶）
+- week41 ✔️ 周二带着刘小坤和沐沐去滴水湖，来回 150 km。以下是这次开车的几点收获。
+	- 高架左2车道最安全。左1是超车道，右1经常有汇入，都不安全。
+	- 城市道路左2车道最安全，左1是超车道，经常变为左转车道；右1经常变为右转车道，直行时会导致频繁变道。
+	- 练习了真实的倒车入库。
+	- 看得懂百度地图的导航。
+	- 上海南站左拐到柳州路的车道在最右边！
+	- 还是不太会使用后视镜/反光镜来判断车距 TODO [ ]
+	- 环形岛不太会过。TODO [ ]
+
+![](https://mednoter.com/media/files/2020/2020-08-08_15-15-02.jpg)
+
+### 保持财务健康
+
+- 把买房的债务还清
+	- 还清哥哥5万
+	- ✔️ 还清妹妹7万
+- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
+
+> 交易原则  
+> 
+> Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
+> 
+> Rule2: 不主动向朋友推荐 ETF 和股票。  
+> 
+> 若违背以上原则，刘小坤重重的用管教杖责打二次。
+
+### 每个季度回济南看望爷爷奶奶和爸爸妈妈
+
+- Quarter 1 ✔️
+- Quarter 2 🔴 回老家会影响随申码，沐沐就无法上学了，暂时不敢回家
+- Quarter 3 10.23-10.25 回老家(青岛发现疫情，取消回家行程）
+- Quarter 4
+
+### [增补] 每周给爸妈&爷爷奶奶打个电话
+
+- week25 ✔️
+- week26 🔴 打不通
+- week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
+- week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
+- week29 🔴 忘记了
+- week30 ✔️ 和爸妈闲聊了一会。
+- week31 ✔️ 和爸妈闲聊 \| 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
+- week32 ✔️ 和爸妈闲聊
+- week33 🔴 忘记了
+- week34 ✔️
+- week35 ✔️ 和爸妈爷爷奶奶聊天，得知爷爷最近脾气不好。
+- week36 ✔️ 和爸妈爷爷奶奶聊天。
+- week37 ✔️ 爸爸最近迷上了打篮球，给他买了双球鞋，买了个水杯。
+- week38 ✔️ 妈妈生病，10月份自己单独回家一趟。
+- week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
+- week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
+- week41 🔴
+- week42 ✔️ 和奶奶聊了聊天
+- week43(WIP) 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+### [增补] 每个月给爷爷奶奶寄送 5 张照片
+
+- June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
+- July. 🔴
+- Aug. ✔️
+- Sept. 🔴
+- Oct.
+- Nov.
+- Dec.
+
 ### 11 其他
 
 - week35 尝试使用沙漏 ⏳ 培养沐沐的时间概念，在规定的时间内起床/穿衣服。
@@ -472,10 +483,25 @@ B: badminton
 - week38 确立一些[教育原则](https://mednoter.com/rules-to-shepherding-the-heart-of-child.html)，避免因教育理念不同而吵架。
 - week40 当时崔迪明介绍沙漏给我时，没太当回事。没想到沙漏真的可以让小朋友感知到时间。沐沐几乎不赖床了。再次警戒自己要谦卑，多听，少说，不要自以为是，刚愎自用。
 
-
 ---
 
-## English
+## 学习
+
+### 1. Review Anki everyday
+
+- week43(WIP) 1 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+
+### 2. 英语
 
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
@@ -521,7 +547,7 @@ B: badminton
 - week40 on vacation
 - week41 on vacation. 一个决心：Daniel / Vincent 中英文都很流利，但是以后开会我们决定都说英文，这样我可以练习英文，和客户以及partner沟通的时候不至于发怵。
 - week42 ✔️ talk with Daniel, Talk with Rob 自从和 Daniel and Vincent 用英文开会以来，效果非常显著。
-- week43(WIP) 
+- week43(WIP) talk with Daniel
 - week44 
 - week45 
 - week46 
@@ -533,6 +559,109 @@ B: badminton
 - week52 
 
 
+### 3.考个 AWS Certified Solutions Architect 证书。
+
+我应该会继续在外企这条路上干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
+
+- week1 ✔️ Security Group
+- week2 ✔️ Lambda/Gateway
+- week3 ✔️ AWS route 53 / ALB / RDS
+- week4 ✔️ S3/Glacier Storage
+- week5  
+	- IAM/RDS/SQS/CloudFront/CloudFormation ✔️
+	-  Purchase [Udemy AWS practice test](https://www.udemy.com/course/aws-certified-solutions-architect-associate-amazon-practice-exams/) ✔️
+- week8 ✔️ Application Load balancer && HTTP/2
+- week12 🔴 no progress
+- week13 🔴 no progress
+- week14 🔴 no progress
+- week15 ✔️ 开始上 udemy 的课程
+- week16 ✔️ 上了2节 udemy 的课程
+- week17-18 🔴 no progress
+- week19 ✔️ [Udemy AWS Course: EC2](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-37
+- week20 ✔️[Udemy AWS Course: EBS](https://www.udemy.com/share/102CPBAEMadldSRn8J/)
+- week21 ✔️[Udemy AWS Course: RDS](https://www.udemy.com/share/102CPBAEMadldSRn8J/) 
+- week22 ✔️ Udemy AWS Course: Route53
+- week23 ✔️ Udemy AWS Course: ELB
+- week24 ✔️ Udemy AWS Course: S3
+- week25 ✔️ Udemy AWS Course: S3 + CORS
+- week26 🔴 no progress （全家出游)
+- week27 ✔️ CloudFront + S3
+- week28 🔴 no progress (花了很多时间在小组的事情上）
+- week29 ✔️ start SQS
+- week30 🔴 no progress (业余时间放在了驾照科目三的考试上）
+- week31 🔴 no progress (业余时间放在了《宗教情感》上）
+- week32 ✔️ Udemy Section 17: Databases in AWS
+- week33 ✔️ Udemy Section 18: CloudWatch, CloudTrail and Config
+- week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store, CloudHSM
+- week35 ✔️ Udemy Section 21: VPC - CIDR 做程序员7年了，我居然连 IP 地址/子网掩码都不懂，羞愧。
+- week36 ✔️ IP address / Mask / Network ID / Host ID / Subnetting
+- week37 ✔️ Udemy Section 21: CIDR / VLSM / FLSM / NAT / Private IP ranges
+- week38 🔴 Routing Table 这周没太花时间在 aws 上
+- week39  PrivateLink / Egress Internet Gateway / VPC peering / Transmit Hub  VPC 太难了，已经卡了2周了，这周开始走不求甚解。
+- week40 ✔️ VPC: Network ACLs
+- week41 ✔️ VPC endpoints: interface endpoint, gateway endpoints
+- week42 🔴 not too much progress
+- week43(WIP) ✔️ Review VPC / Learn Disaster Recovery
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+### 4.打磨前端能力，达到初级前端程序员的水平。
+
+比如，能马马虎虎的写个小网站。
+
+- week6 ✔️ learn React
+- week7 ✔️ ant design / router / redux / Dva
+- week8 ✔️ reflex
+- week10 ✔️ arrow function / redux connect, combine reducer, redux selector
+- week11 ✔️ learn Redux though doing this [example](https://github.com/reduxjs/redux/tree/99d47a55d769c456ac902f6738f9a90627d7cc8f/examples/todomvc) project.
+- week12 ✔️ JS prototype
+- week13 ✔️ this / apply, call, binding
+- week14 ✔️ this / new
+- week15 🔴 no progress
+- week16 🔴 no progress
+- week17 🔴 no progress
+- week18 🔴 no progress
+- week19 🔴 no progress
+- week20 🔴 no progress
+- week21 🔴 no progress
+- week22 🔴 no progress
+- week23 🔴 no progress
+- week24 🔴 no progress
+- week25 🔴 no progress
+- week26 🔴 no progress
+- week27 🔴 no progress
+- week28 🔴 no progress
+- week29 🔴 no progress
+- week30 🔴 no progress
+- week31 🔴 no progress
+- week32 🔴 no progress
+- week33 🔴 no progress
+- week34 🔴 no progress
+- week35 🔴 no progress
+- week36 🔴 no progress
+- week37 🔴 no progress
+- week38 🔴 no progress （下一年开始学前端，认真的）
+- week39 🔴 no progress
+- week40 🔴 expected no progress
+- week41 🔴 expected no progress
+- week42 🔴 expected no progress
+- week43(WIP) 🔴 expected no progress
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 ---
 
@@ -583,111 +712,7 @@ B: badminton
 - week40 on vacation
 - week41 on vacation
 - week42 SAML SSO / Help Rainux to onboard
-- week43(WIP) 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
-
-### 2.考个 AWS Certified Solutions Architect 证书。
-
-我应该会继续在外企这条路上干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
-
-- week1 ✔️ Security Group
-- week2 ✔️ Lambda/Gateway
-- week3 ✔️ AWS route 53 / ALB / RDS
-- week4 ✔️ S3/Glacier Storage
-- week5  
-	- IAM/RDS/SQS/CloudFront/CloudFormation ✔️
-	-  Purchase [Udemy AWS practice test](https://www.udemy.com/course/aws-certified-solutions-architect-associate-amazon-practice-exams/) ✔️
-- week8 ✔️ Application Load balancer && HTTP/2
-- week12 🔴 no progress
-- week13 🔴 no progress
-- week14 🔴 no progress
-- week15 ✔️ 开始上 udemy 的课程
-- week16 ✔️ 上了2节 udemy 的课程
-- week17-18 🔴 no progress
-- week19 ✔️ [Udemy AWS Course: EC2](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-37
-- week20 ✔️[Udemy AWS Course: EBS](https://www.udemy.com/share/102CPBAEMadldSRn8J/)
-- week21 ✔️[Udemy AWS Course: RDS](https://www.udemy.com/share/102CPBAEMadldSRn8J/) 
-- week22 ✔️ Udemy AWS Course: Route53
-- week23 ✔️ Udemy AWS Course: ELB
-- week24 ✔️ Udemy AWS Course: S3
-- week25 ✔️ Udemy AWS Course: S3 + CORS
-- week26 🔴 no progress （全家出游)
-- week27 ✔️ CloudFront + S3
-- week28 🔴 no progress (花了很多时间在小组的事情上）
-- week29 ✔️ start SQS
-- week30 🔴 no progress (业余时间放在了驾照科目三的考试上）
-- week31 🔴 no progress (业余时间放在了《宗教情感》上）
-- week32 ✔️ Udemy Section 17: Databases in AWS
-- week33 ✔️ Udemy Section 18: CloudWatch, CloudTrail and Config
-- week34 ✔️ Udemy Section 20: KMS, Secrets manager, Parameter Store, CloudHSM
-- week35 ✔️ Udemy Section 21: VPC - CIDR 做程序员7年了，我居然连 IP 地址/子网掩码都不懂，羞愧。
-- week36 ✔️ IP address / Mask / Network ID / Host ID / Subnetting
-- week37 ✔️ Udemy Section 21: CIDR / VLSM / FLSM / NAT / Private IP ranges
-- week38 🔴 Routing Table 这周没太花时间在 aws 上
-- week39  PrivateLink / Egress Internet Gateway / VPC peering / Transmit Hub  VPC 太难了，已经卡了2周了，这周开始走不求甚解。
-- week40 ✔️ VPC: Network ACLs
-- week41 ✔️ VPC endpoints: interface endpoint, gateway endpoints
-- week42 🔴 not too much progress
-- week43(WIP) 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
-
-### 3.打磨前端能力，达到初级前端程序员的水平。
-
-比如，能马马虎虎的写个小网站。
-
-- week6 ✔️ learn React
-- week7 ✔️ ant design / router / redux / Dva
-- week8 ✔️ reflex
-- week10 ✔️ arrow function / redux connect, combine reducer, redux selector
-- week11 ✔️ learn Redux though doing this [example](https://github.com/reduxjs/redux/tree/99d47a55d769c456ac902f6738f9a90627d7cc8f/examples/todomvc) project.
-- week12 ✔️ JS prototype
-- week13 ✔️ this / apply, call, binding
-- week14 ✔️ this / new
-- week15 🔴 no progress
-- week16 🔴 no progress
-- week17 🔴 no progress
-- week18 🔴 no progress
-- week19 🔴 no progress
-- week20 🔴 no progress
-- week21 🔴 no progress
-- week22 🔴 no progress
-- week23 🔴 no progress
-- week24 🔴 no progress
-- week25 🔴 no progress
-- week26 🔴 no progress
-- week27 🔴 no progress
-- week28 🔴 no progress
-- week29 🔴 no progress
-- week30 🔴 no progress
-- week31 🔴 no progress
-- week32 🔴 no progress
-- week33 🔴 no progress
-- week34 🔴 no progress
-- week35 🔴 no progress
-- week36 🔴 no progress
-- week37 🔴 no progress
-- week38 🔴 no progress （下一年开始学前端，认真的）
-- week39 🔴 no progress
-- week40 🔴 expected no progress
-- week41 🔴 expected no progress
-- week42 🔴 expected no progress
-- week43(WIP) 
+- week43(WIP) Performance tuning
 - week44 
 - week45 
 - week46 
@@ -699,7 +724,7 @@ B: badminton
 - week52 
 
 
-### ~~4.提高自己远程办公的能力~~
+### ~~2.提高自己远程办公的能力~~
 
 ~~Objective~~
 
@@ -719,64 +744,6 @@ B: badminton
 
 (2020-08-27 update: 放弃这个烂目标，增补一个简单的目标—— 早起！六点起床读经祷告！）
 
-
-### 5.业余爱好
-
-#### 组织 Ruby 上海地区的线下聚会
-
-- week37 组织一次，并且申请了 Jetbrains 的兑换码作为奖品。
-
-#### 参与到开源项目 TiDB 数据库中。
-
-学习 TiDB 的开源文化和组织形式 / 参加 Meetup 加入 TiDB Working Group (optional)
-
-#### 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
-
-✔️ Jan 《远程办公：如何提高自己的自制力》 学会开白名单 / 被 CSDN/51job/开智/进退学说转载 /无意蹭了热点远程办公。
-
-✔️ 2020-02-11 《远程办公：如何边工作，边带孩子？》学会设置"所有人都可以留言" / 打赏 / 流量主 / 商品推广
-
-✔️ 2020-02-29《远程办公：如何招聘有自驱力的员工？》找准定位 soho / programming/ remote worker
-
-✔️ 2020-03-07《教孩子管理金钱》
-
-✔️ 2020-03-13 《吕小荣的股票交易原则》。文章名字起的不好，自己又不是啥投资名人，who care 
-
-✔️ 2020-05-16《教小朋友识字》
-
-✔️《教小朋友学习的一点心得》《请求与命令》
-
-✔️《沐沐的2020成长日记》《如果能给年轻时的自己一点钱，你会给多少？》 《使用 Rails generator 提高开发效率》
-
-✔️ Sept. 《我和妻子教育孩子的约定》
-
-update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个微信号，哪有这么简单。随它去吧，佛系维护。
-
-
-#### 欧阳志平邀请的公开课：Anki
-
-#### 用 Python 写个 PubMed 小网站，练习 Python。
-
-#### 学一下 Anki 的源码，尝试提交代码（尝试搭建一个 Anki 中文论坛？）
-
-#### 糖尿病食谱小助手
-
-#### 小朋友打疫苗日历提醒小助手
-
-#### 微信小程序：保单管家
-
-- ~~随机约饭助手，帮助教会内的弟兄姐妹约饭，互相认识，发送日历提醒，发送微信提醒。中国怎么没有出现过本土的优秀的教会管理软件？(在群里调研了一下，大家说缺的是时间，而不是工具，而且响应这个活动的人数寥寥，看来不是刚需）~~
-
-#### 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。
-
-#### 学术造假数据库，给少灵用用看。
-
-#### Flash Card
-- [发现一个很棒的闪卡在医学领域的落地 HLT](https://builtbyhlt.com/)
-
-#### 用 python 写一个微信机器人，自动处理教会的微信通知和广播
-
-
 ---
 
 ## 教会服侍
@@ -792,7 +759,23 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 
 > 我服侍是因为喜欢，祝福到别人也是一件开心的事。我要努力让接受帮助的人应该意识到我的界限和优先级——你没有我的家人重要，教会的服侍就是排在我的健康，家庭，学习，工作之后。如果有人习惯性扮可怜用内疚感来榨取我的时间和资源，或用属灵的大道理来游说我，我会勇敢的说： No，你越界了！
 
-### 1.开放家庭
+
+<!---### 1.帮助两个好朋友
+
+- week43(WIP) 邀请 Ta 来家里吃饭。 \|
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+-->
+
+### 2.开放家庭
 
 每月请弟兄姐妹/朋友/同事来家里聚餐。刘小坤喜爱安静，一开始以为她会反对，结果她喜欢招待那些关系亲密的朋友。
   
@@ -816,7 +799,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - Dec.
 
 
-### 2.在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
+### 3.在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
 
 <!-- 如果他们有需要，就提供帮助。-->
 
@@ -836,9 +819,30 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - Nov.
 - Dec.
 	
-	
-### 3.每个月和一个老朋友打电话（或吃饭），随便聊聊天。
+### 4. 长期和一个年轻人（向文）保持连接。
 
+彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。g
+
+- week35 ✔️ 
+- week36 🔴 这周很烦，什么人也不想见，就想自己独处一会。
+- week37 🔴 no progress
+- week38 ✔️ 祷告会挪到了周三，因为大家周日晚上没时间。
+- week39 ✔️ 周三晚上吕蓝文一起祷告。
+- week40 on Vacation
+- week41 on Vacation
+- week42 ✔️ 周三晚上和向文一起聊天，他指出我应该停止过度反思，心大一点，没心没肺一点。对于我是非常大的帮助。
+- week43(WIP) 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+	
+### 5.每个月和一个老朋友打电话（或吃饭），随便聊聊天。
 
 - Jan. Talk with Sam Qiu. ✔️
 - Feb. Had a podcast with Python 大妈 & 张烁 ✔️
@@ -852,11 +856,11 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - July. 🔴 failed
 - Aug. 🔴 failed
 - Sept. 🔴 failed
-- Oct. 2020-10-18 和吕林哥哥随便聊天
+- Oct. 2020-10-18 和吕林哥哥聊天
 - Nov.
 - Dec.
 
-### 4. 送别人有帮助的书籍
+### 6. 送别人有帮助的书籍
 
 1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的 NIV 版本，这样他们不会轻易扔掉。
 	- Python 大妈 ✔️
@@ -883,7 +887,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 	- 送冯阿姨的儿子《欲罢不能》✔️
 
 
-### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
+### 7. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
 
 已经设定好日历了，到时候按计划讨论。
 
@@ -892,38 +896,17 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - 2020-12-25: 第四季度沟通
 
 
-### 6. 带领3次小组读经，3次小组祷告会。
+### 8. 带领3次小组读经，3次小组祷告会。
 
 - ✔️ 2020-08-02 小组祷告会
 - ✔️ 2020-08-09 小组祷告会
 - ✔️ 2020-08-16 小组祷告会
 - ✔️ 2020-08-23 小组祷告会
 
-### 7. 长期和一个年轻人（向文）保持连接。
-
-彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。g
-
-- week35 ✔️ 
-- week36 🔴 这周很烦，什么人也不想见，就想自己独处一会。
-- week37 🔴 no progress
-- week38 ✔️ 祷告会挪到了周三，因为大家周日晚上没时间。
-- week39 ✔️ 周三晚上吕蓝文一起祷告。
-- week40 on Vacation
-- week41 on Vacation
-- week42 ✔️ 周三晚上和向文一起聊天，他指出我应该停止过度反思，心大一点，没心没肺一点。对于我是非常大的帮助。
-- week43(WIP) 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
 
 
-### 8.在教会和小组内的其他杂七杂八的事情。
+
+### 9.在教会和小组内的其他杂七杂八的事情。
 
 继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
 
@@ -932,7 +915,7 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - 建立了很多微信兴趣小组，让彼此有个交集。(delegate 给合适的人，自己并不擅长）
 - 鼓励坤叔把读经打卡活动扩展到整个教会层面。加入坤叔的这个活动后，我每天都在读经（以前一周最多5次），比以前增加了2天。彼此鼓励让我增长了 40% 的动力。
 
-### 9. 自己不擅长的事情，Say No, 找其他人互补。
+### 10. 自己不擅长的事情，Say No, 找其他人互补。
 
 - 我不喜欢关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）\| 2020-10-15 好像只要保证一定的界限，不被粘上，我可以和新朋友熟络起来，也愿意关心他们。
 - 我不喜欢陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
@@ -960,6 +943,65 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 - week4 ✔️ 读完《欲罢不能》
 - week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences
 - week11 ✔️ 草拟一个适合自己的 [股票交易原则](https://mednoter.com/two-rules-for-investment.html)，避免对股票上瘾，浪费时间。
+
+---
+
+
+## 做一些“没用”但是有趣的事
+
+### 组织 Ruby 上海地区的线下聚会
+
+- week37 组织一次，并且申请了 Jetbrains 的兑换码作为奖品。
+
+### 参与到开源项目 TiDB 数据库中。
+
+学习 TiDB 的开源文化和组织形式 / 参加 Meetup 加入 TiDB Working Group (optional)
+
+### 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
+
+✔️ Jan 《远程办公：如何提高自己的自制力》 学会开白名单 / 被 CSDN/51job/开智/进退学说转载 /无意蹭了热点远程办公。
+
+✔️ 2020-02-11 《远程办公：如何边工作，边带孩子？》学会设置"所有人都可以留言" / 打赏 / 流量主 / 商品推广
+
+✔️ 2020-02-29《远程办公：如何招聘有自驱力的员工？》找准定位 soho / programming/ remote worker
+
+✔️ 2020-03-07《教孩子管理金钱》
+
+✔️ 2020-03-13 《吕小荣的股票交易原则》。文章名字起的不好，自己又不是啥投资名人，who care 
+
+✔️ 2020-05-16《教小朋友识字》
+
+✔️《教小朋友学习的一点心得》《请求与命令》
+
+✔️《沐沐的2020成长日记》《如果能给年轻时的自己一点钱，你会给多少？》 《使用 Rails generator 提高开发效率》
+
+✔️ Sept. 《我和妻子教育孩子的约定》
+
+update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个微信号，哪有这么简单。随它去吧，佛系维护。
+
+
+### 欧阳志平邀请的公开课：Anki
+
+### 用 Python 写个 PubMed 小网站，练习 Python。
+
+### 学一下 Anki 的源码，尝试提交代码（尝试搭建一个 Anki 中文论坛？）
+
+### 糖尿病食谱小助手
+
+### 小朋友打疫苗日历提醒小助手
+
+### 微信小程序：保单管家
+
+- ~~随机约饭助手，帮助教会内的弟兄姐妹约饭，互相认识，发送日历提醒，发送微信提醒。中国怎么没有出现过本土的优秀的教会管理软件？(在群里调研了一下，大家说缺的是时间，而不是工具，而且响应这个活动的人数寥寥，看来不是刚需）~~
+
+### 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。
+
+### 学术造假数据库，给少灵用用看。
+
+### Flash Card
+- [发现一个很棒的闪卡在医学领域的落地 HLT](https://builtbyhlt.com/)
+
+### 用 python 写一个微信机器人，自动处理教会的微信通知和广播
 
 ---
 
