--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -302,7 +302,6 @@ B: badminton
 - week51 
 - week52 
 
-
 ### [增补] 教沐沐数学
 
 - week27 ✔️ 开始学习洪恩数学中的 1-5，大小，高矮
@@ -332,7 +331,7 @@ B: badminton
 - week51 
 - week52 
 
-### [增补?] 锻炼沐沐的表达能力
+### [增补] 锻炼沐沐的表达能力
 
 背景：老师告诉我沐沐在学校太安静了，希望家长想办法锻炼一下他的表达，话多一点。
 
@@ -362,22 +361,63 @@ B: badminton
 - week51 
 - week52 
 
-### 5.探索: 邀请沐沐的好朋友来家里做客
+### [Tentative] 邀请沐沐的好朋友来家里做客
 
 - week35 ✔️ 这周六刚好要帮小组照顾小孩，葡萄和颜言来我家。
-- week42 沐沐同学来家里一起学英文，每周两次。
+- week42 ✔️ 沐沐同学来家里一起学英文，每周两次。
 
-### 4.~~探索: 教沐沐编程~~
-
-~~（或许可以先从逻辑开始）~~
-
-### 9. [增补] 每半年带全家人出去旅游一次
+### [增补] 每半年带全家人出去旅游一次
 
 - week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
 - week40 and week41 10.2 青西郊野公园 \| 10.3 去大叔家 \|  10.6 去滴水湖
 
-### 10. ~~[Tentative]: 教沐沐打字 (他不感兴趣)~~
+### 每个季度回济南看望爷爷奶奶和爸爸妈妈
 
+- Quarter 1 ✔️
+- Quarter 2 🔴 回老家会影响随申码，沐沐就无法上学了，暂时不敢回家
+- Quarter 3 10.23-10.25 回老家(青岛发现疫情，取消回家行程）
+- Quarter 4
+
+### [增补] 每周给爸妈&爷爷奶奶打个电话
+
+- week25 ✔️
+- week26 🔴 打不通
+- week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
+- week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
+- week29 🔴 忘记了
+- week30 ✔️ 和爸妈闲聊了一会。
+- week31 ✔️ 和爸妈闲聊 \| 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
+- week32 ✔️ 和爸妈闲聊
+- week33 🔴 忘记了
+- week34 ✔️
+- week35 ✔️ 和爸妈爷爷奶奶聊天，得知爷爷最近脾气不好。
+- week36 ✔️ 和爸妈爷爷奶奶聊天。
+- week37 ✔️ 爸爸最近迷上了打篮球，给他买了双球鞋，买了个水杯。
+- week38 ✔️ 妈妈生病，10月份自己单独回家一趟。
+- week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
+- week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
+- week41 🔴
+- week42 ✔️ 和奶奶聊了聊天
+- week43(WIP) 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
+### [增补] 每个月给爷爷奶奶寄送 5 张照片
+
+- June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
+- July. 🔴
+- Aug. ✔️
+- Sept. 🔴
+- Oct.
+- Nov.
+- Dec.
 
 ### 拿到驾照 ✔️
 
@@ -428,53 +468,17 @@ B: badminton
 > 
 > 若违背以上原则，刘小坤重重的用管教杖责打二次。
 
-### 每个季度回济南看望爷爷奶奶和爸爸妈妈
+### ~~[Tentative] 教沐沐编程~~
 
-- Quarter 1 ✔️
-- Quarter 2 🔴 回老家会影响随申码，沐沐就无法上学了，暂时不敢回家
-- Quarter 3 10.23-10.25 回老家(青岛发现疫情，取消回家行程）
-- Quarter 4
+~~或许可以先从逻辑开始~~
 
-### [增补] 每周给爸妈&爷爷奶奶打个电话
+~~update: 他不感兴趣~~
 
-- week25 ✔️
-- week26 🔴 打不通
-- week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
-- week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
-- week29 🔴 忘记了
-- week30 ✔️ 和爸妈闲聊了一会。
-- week31 ✔️ 和爸妈闲聊 \| 和爷爷奶奶闲聊，大姑刚好也在，顺便和她聊了聊
-- week32 ✔️ 和爸妈闲聊
-- week33 🔴 忘记了
-- week34 ✔️
-- week35 ✔️ 和爸妈爷爷奶奶聊天，得知爷爷最近脾气不好。
-- week36 ✔️ 和爸妈爷爷奶奶聊天。
-- week37 ✔️ 爸爸最近迷上了打篮球，给他买了双球鞋，买了个水杯。
-- week38 ✔️ 妈妈生病，10月份自己单独回家一趟。
-- week39 ✔️ 妈妈开始透析了，肾脏已经不行了。持续跟进，希望她真的悔改，不要再做挂名基督徒了。
-- week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
-- week41 🔴
-- week42 ✔️ 和奶奶聊了聊天
-- week43(WIP) 
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
 
-### [增补] 每个月给爷爷奶奶寄送 5 张照片
+### ~~[Tentative] 教沐沐打字 ~~
 
-- June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
-- July. 🔴
-- Aug. ✔️
-- Sept. 🔴
-- Oct.
-- Nov.
-- Dec.
+~~update: 他不感兴趣~~
+
 
 ### 11 其他
 
@@ -489,7 +493,7 @@ B: badminton
 
 ### 1. Review Anki everyday
 
-- week43(WIP) 1 
+- week43(WIP) 11
 - week44 
 - week45 
 - week46 
@@ -501,7 +505,7 @@ B: badminton
 - week52 
 
 
-### 2. 英语
+### 2. English
 
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
@@ -757,7 +761,7 @@ B: badminton
 > 2020-10-09 update  
 > 读完《过犹不及》之后，最大的收获是：日常生活中我们非常擅长用内疚感操控别人。教会里也一样，一句“没有爱心”就让别人缴械投降，从而利用别人达到自己的诉求。以后意识到这点，不操纵别人，也避免自己被操纵，同时也努力保护那些心思单纯的人。
 
-> 我服侍是因为喜欢，祝福到别人也是一件开心的事。我要努力让接受帮助的人应该意识到我的界限和优先级——你没有我的家人重要，教会的服侍就是排在我的健康，家庭，学习，工作之后。如果有人习惯性扮可怜用内疚感来榨取我的时间和资源，或用属灵的大道理来游说我，我会勇敢的说： No，你越界了！
+> 我服侍是因为喜欢，祝福到别人也是一件开心的事。我要努力让接受帮助的人应该意识到我的界限和优先级——你没有我的家人重要，教会的服侍就是排在我的健康，家庭，学习，工作之后。如果有人扮可怜用内疚感来榨取我的时间和资源，或用属灵的大道理来游说我，我会勇敢的说： No，你越界了！
 
 
 <!---### 1.帮助两个好朋友
@@ -1005,6 +1009,14 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 
 ---
 
+历年的决心：
+
+1. [My new year's resolutions for 2019](/plan-for-2019.html)
+2. [My new year's resolutions for 2017 and 2018](/plan-for-2017-and-2018.html)
+3. [My new year's resolutions for 2016](/study-plan-2016.html)
+4. [My new year's resolutions for 2015](/my-2014.html)
+4. [My new year's resolutions for 2013 and 2014](/study-plan.html)
+
 已经工作八年了，有六年都做了年度计划。大部分都是按照计划推进，但依然无法掌控人生的轨迹。
 
 一是，年轻时没有智慧，做事情容易急功近利，随大流，忽视家庭，忽视健康。等到稍微懂成熟一点，就会发现不值。
@@ -1012,9 +1024,3 @@ update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个
 二是，人真的太渺小了，哪扇门开启，哪扇门关闭，往往大环境决定的。
 
 我们的生命不过是湖面上云雾，太阳一晒，就消散了。有谁能看得到明天呢？
-
-1. [My new year's resolutions for 2019](/plan-for-2019.html)
-2. [My new year's resolutions for 2017 and 2018](/plan-for-2017-and-2018.html)
-3. [My new year's resolutions for 2016](/study-plan-2016.html)
-4. [My new year's resolutions for 2015](/my-2014.html)
-4. [My new year's resolutions for 2013 and 2014](/study-plan.html)
