--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -12,7 +12,7 @@ tags:
 2020年的计划，分了六个板块按照优先级从高到低排序：信仰，健康，家庭，学习，职场，教会。
 
 
-## Faith
+## 信仰
 
 每天读经祷告，每周聚会，无特殊原因不要缺席。
 
@@ -94,7 +94,7 @@ tags:
 
 ---
 
-## Health
+## 健康
 
 每周2次有氧运动（跑步或游泳皆可）。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。若健身房开业，加一次力量训练。
 
@@ -166,7 +166,7 @@ B: badminton
 
 ---
 
-## Family
+## 家庭
 
 ### 爱妻子
 
@@ -764,7 +764,7 @@ B: badminton
 > 我服侍是因为喜欢，祝福到别人也是一件开心的事。我要努力让接受帮助的人应该意识到我的界限和优先级——你没有我的家人重要，教会的服侍就是排在我的健康，家庭，学习，工作之后。如果有人扮可怜用内疚感来榨取我的时间和资源，或用属灵的大道理来游说我，我会勇敢的说： No，你越界了！
 
 
-<!---### 1.帮助两个好朋友
+<!---### 0.帮助两个好朋友
 
 - week43(WIP) 邀请 Ta 来家里吃饭。 \|
 - week44 
@@ -779,7 +779,7 @@ B: badminton
 
 -->
 
-### 2.开放家庭
+### 1.开放家庭
 
 每月请弟兄姐妹/朋友/同事来家里聚餐。刘小坤喜爱安静，一开始以为她会反对，结果她喜欢招待那些关系亲密的朋友。
   
@@ -803,7 +803,7 @@ B: badminton
 - Dec.
 
 
-### 3.在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
+### 2.在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
 
 <!-- 如果他们有需要，就提供帮助。-->
 
@@ -823,7 +823,7 @@ B: badminton
 - Nov.
 - Dec.
 	
-### 4. 长期和一个年轻人（向文）保持连接。
+### 3. 长期和一个年轻人（向文）保持连接。
 
 彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。g
 
@@ -846,7 +846,7 @@ B: badminton
 - week51 
 - week52 
 	
-### 5.每个月和一个老朋友打电话（或吃饭），随便聊聊天。
+### 4.每个月和一个老朋友打电话（或吃饭），随便聊聊天。
 
 - Jan. Talk with Sam Qiu. ✔️
 - Feb. Had a podcast with Python 大妈 & 张烁 ✔️
@@ -864,7 +864,7 @@ B: badminton
 - Nov.
 - Dec.
 
-### 6. 送别人有帮助的书籍
+### 5. 送别人有帮助的书籍
 
 1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的 NIV 版本，这样他们不会轻易扔掉。
 	- Python 大妈 ✔️
@@ -891,7 +891,7 @@ B: badminton
 	- 送冯阿姨的儿子《欲罢不能》✔️
 
 
-### 7. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
+### 6. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
 
 已经设定好日历了，到时候按计划讨论。
 
@@ -900,7 +900,7 @@ B: badminton
 - 2020-12-25: 第四季度沟通
 
 
-### 8. 带领3次小组读经，3次小组祷告会。
+### 7. 带领3次小组读经，3次小组祷告会。
 
 - ✔️ 2020-08-02 小组祷告会
 - ✔️ 2020-08-09 小组祷告会
@@ -910,7 +910,7 @@ B: badminton
 
 
 
-### 9.在教会和小组内的其他杂七杂八的事情。
+### 8.在教会和小组内的其他杂七杂八的事情。
 
 继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
 
@@ -919,7 +919,7 @@ B: badminton
 - 建立了很多微信兴趣小组，让彼此有个交集。(delegate 给合适的人，自己并不擅长）
 - 鼓励坤叔把读经打卡活动扩展到整个教会层面。加入坤叔的这个活动后，我每天都在读经（以前一周最多5次），比以前增加了2天。彼此鼓励让我增长了 40% 的动力。
 
-### 10. 自己不擅长的事情，Say No, 找其他人互补。
+### 9. 自己不擅长的事情，Say No, 找其他人互补。
 
 - 我不喜欢关心陌生人。个性内向，非常不喜欢迅速的和一个人建立关系。(2020-07-23 我发现和别人打个招呼似乎没那么难，只要不被长久粘上，心里就可以接受。）\| 2020-10-15 好像只要保证一定的界限，不被粘上，我可以和新朋友熟络起来，也愿意关心他们。
 - 我不喜欢陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
@@ -953,15 +953,15 @@ B: badminton
 
 ## 做一些“没用”但是有趣的事
 
-### 组织 Ruby 上海地区的线下聚会
+### 1. 组织 Ruby 上海地区的线下聚会
 
 - week37 组织一次，并且申请了 Jetbrains 的兑换码作为奖品。
 
-### 参与到开源项目 TiDB 数据库中。
+### 2. 参与到开源项目 TiDB 数据库中。
 
 学习 TiDB 的开源文化和组织形式 / 参加 Meetup 加入 TiDB Working Group (optional)
 
-### 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
+### 3. 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
 
 ✔️ Jan 《远程办公：如何提高自己的自制力》 学会开白名单 / 被 CSDN/51job/开智/进退学说转载 /无意蹭了热点远程办公。
 
@@ -984,32 +984,32 @@ B: badminton
 update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个微信号，哪有这么简单。随它去吧，佛系维护。
 
 
-### 欧阳志平邀请的公开课：Anki
+### 4. 欧阳志平邀请的公开课：Anki
 
-### 用 Python 写个 PubMed 小网站，练习 Python。
+### 5. 用 Python 写个 PubMed 小网站，练习 Python。
 
-### 学一下 Anki 的源码，尝试提交代码（尝试搭建一个 Anki 中文论坛？）
+### 6. 学一下 Anki 的源码，尝试提交代码（尝试搭建一个 Anki 中文论坛？）
 
-### 糖尿病食谱小助手
+### 7. 糖尿病食谱小助手
 
-### 小朋友打疫苗日历提醒小助手
+### 8. 小朋友打疫苗日历提醒小助手
 
-### 微信小程序：保单管家
+### 9. 微信小程序：保单管家
 
-- ~~随机约饭助手，帮助教会内的弟兄姐妹约饭，互相认识，发送日历提醒，发送微信提醒。中国怎么没有出现过本土的优秀的教会管理软件？(在群里调研了一下，大家说缺的是时间，而不是工具，而且响应这个活动的人数寥寥，看来不是刚需）~~
+### ~~10. 随机约饭助手~~
 
-### 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。
+帮助教会内的弟兄姐妹约饭，互相认识，发送日历提醒，发送微信提醒。中国怎么没有出现过本土的优秀的教会管理软件？(在群里调研了一下，大家说缺的是时间，而不是工具，而且响应这个活动的人数寥寥，看来不是刚需）
 
-### 学术造假数据库，给少灵用用看。
+### 11. 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。
 
-### Flash Card
+### 12. 学术造假数据库，给少灵用用看。
+
+### 13. Flash Card
 - [发现一个很棒的闪卡在医学领域的落地 HLT](https://builtbyhlt.com/)
 
-### 用 python 写一个微信机器人，自动处理教会的微信通知和广播
+### 14. 用 python 写一个微信机器人，自动处理教会的微信通知和广播
 
 ---
-
-历年的决心：
 
 1. [My new year's resolutions for 2019](/plan-for-2019.html)
 2. [My new year's resolutions for 2017 and 2018](/plan-for-2017-and-2018.html)
