--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -80,7 +80,7 @@ tags:
 - week40《诗篇》10????? Pray 11????? 国庆节，忘记复盘了
 - week41 🔴《诗篇》 11011010 Pray 11011010 规律的作息非常重要，作息只要乱了，就甭指望早起读经祷告了了。最近还是没从过去发生的一些事情中走出来，心里十分苦闷，反而读诗篇的时候开始理解诗人了。
 - week42 《诗篇》 1110111 Pray 1100111
-- week43(WIP) 《诗篇》 1 Pray 1 ，顺便读杂书《意义的惊现》。
+- week43(WIP) 《诗篇》 11 Pray 11 ，顺便读杂书《意义的惊现》 11。
 - week44
 - week45
 - week46
@@ -145,7 +145,7 @@ tags:
 - week40 锻炼 1000000 \|  早睡 00????? \| 早起 1111111 \|  站立办公2小时 11????? \| 颈椎推拿 0000000  \| 在极客时间买了一个跑步教程，学学看。 00
 - week41 🔴 锻炼 00R00B0 \|  早睡 0000000 \| 早起 0100101 \|  站立办公2小时 0001110 \| 颈椎推拿 000011 \| 跑步教材学习 0000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
 - week42 🔴 锻炼 000000R \|  早睡 0101001 \| 早起 1100000 天冷了，起不来了。 \|  站立办公1小时 00101 \| 颈椎推拿 1010 \| 跑步教材学习 0000 \| 鱼油一粒 1111111 \| 一杯水 1111111
-- week43(WIP)  锻炼 0 \|  早睡 1 \| 早起 1 \|  站立办公1小时 1 \| 颈椎推拿 1 \| 跑步教材学习 0 \| 鱼油一粒 1 \| 一杯水 1
+- week43(WIP)  锻炼 0R \|  早睡 10 \| 早起 11 \|  站立办公1小时 11 \| 颈椎推拿 10 \| 跑步教材学习 00 \| 鱼油一粒 11 \| 一杯水 11 \| 工作50分钟休息10分钟 11 \| 饭后漱口 11 \| 吃饭要慢(>15分钟) 11 \| 晚上吃素 10
 - week44 
 - week45 
 - week46 
@@ -170,7 +170,7 @@ B: badminton
 
 ### 爱妻子
 
-- week43(WIP) Love action 0  \| Love words 1 \| 亲密的身体接触 1 \| 意识到并且感谢妻子的付出 0
+- week43(WIP) Love action 00  \| Love words 10 \| 亲密的身体接触 10 \| 意识到并且感谢妻子的付出 00
 - week44 
 - week45 
 - week46 
@@ -189,7 +189,7 @@ B: badminton
 - week40 ???????
 - week41 ?100110
 - week42 0101???
-- week43(WIP) 1
+- week43(WIP) 10
 - week44 
 - week45 
 - week46 
@@ -225,7 +225,7 @@ B: badminton
 - week40 ？
 - week41 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，一闪一闪，晚上可以让车子注意到他。
 - week42 (新)负责家里的垃圾倾倒
-- week43(WIP) 
+- week43(WIP) 收拾碗筷
 - week44 
 - week45 
 - week46 
@@ -456,7 +456,7 @@ B: badminton
 ### 保持财务健康
 
 - 把买房的债务还清
-	- 还清哥哥5万
+	- ✔️ 还清哥哥5万
 	- ✔️ 还清妹妹7万
 - 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 
@@ -766,7 +766,7 @@ B: badminton
 
 <!---### 0.帮助两个好朋友
 
-- week43(WIP) 邀请 Ta 来家里吃饭。 \|
+- week43(WIP) 邀请 Ta 来家里吃饭。 \| talk with them
 - week44 
 - week45 
 - week46 
